tests/fixtures/invalid/parse_errors/missing_end.luma
-- Missing end keyword
if true do
    let x = 1
